@@ -7,8 +7,8 @@ import java.util.ArrayList;
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.util.ColorRange;
 import edu.colorado.phet.common.phetcommon.util.DoubleRange;
-import edu.colorado.phet.dilutions.DilutionsResources.Strings;
-import edu.colorado.phet.dilutions.DilutionsResources.Symbols;
+import edu.colorado.phet.dilutions.MolarityResources.Strings;
+import edu.colorado.phet.dilutions.MolarityResources.Symbols;
 import edu.colorado.phet.dilutions.common.model.Solute;
 import edu.colorado.phet.dilutions.common.model.Solution;
 import edu.colorado.phet.dilutions.common.model.Solvent.Water;
